# window-chord

./: LICENSE  README.org  adjust-window.scm  adjust-window.sld  geometry  launch-or-select  launch-or-select-app-center  launch-or-select-calibre  launch-or-select-chrome  launch-or-select-emacs  launch-or-select-eog  launch-or-select-evince  launch-or-select-firefox  launch-or-select-inkscape  launch-or-select-libreoffice  launch-or-select-nautilus  launch-or-select-obs-studio  launch-or-select-settings  launch-or-select-signal  launch-or-select-slack  launch-or-select-spotify  launch-or-select-terminal  launch-or-select-thunderbird  launch-or-select-totem  launch-or-select-xdot  left-half  maximize-active-window  minimize-current-window  minimize-other-windows  right-half  select-thunderbird-compose  select-window  select-youtube-music  switch-monitor  switch-monitor-all  window-chord.scm  window-chord.sld
waylos/: Cargo.toml
waylos/src/: main.rs
window-chord-helper/: .gitignore  Cargo.toml
window-chord-helper/src/: main.rs
window-chord-helper/src/types/: commands.rs  geometry.rs  mod.rs
window-chord-helper/src/x11/: act.rs  ewmh.rs  mod.rs  query.rs
